--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_APIKEY="AIzaSyBWmqofOxh_CxCoXHpkQtXk0SaD9Ti7CpE",
-REACT_APP_AUTHDOMAIN="gidify.firebaseapp.com",
-REACT_APP_PROJECTID="gidify",
-REACT_APP_STORAGEBUCKET="gidify.firebasestorage.app",
-REACT_APP_MESSAGINGSENDERID="994693164925",
-REACT_APP_APPID="1:994693164925:web:e575b0e40b6e5aeb85e614",
-REACT_APP_MEASUREMENTID="G-Y8KHZ3T6VS"
+VITE_FIREBASE_API_KEY=AIzaSyBWmqofOxh_CxCoXHpkQtXk0SaD9Ti7CpE
+VITE_FIREBASE_AUTH_DOMAIN=gidify.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=gidify
+VITE_FIREBASE_STORAGE_BUCKET=gidify.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=994693164925
+VITE_FIREBASE_APP_ID=1:994693164925:web:e575b0e40b6e5aeb85e614
+VITE_FIREBASE_MEASUREMENT_ID=G-Y8KHZ3T6VS
